API features for cooperation etc.
